Reduce technical debt